Use JDK15 toolchain