@@ -6,8 +6,14 @@ plugins {
 
 group = 'nano'
 
-sourceCompatibility = '14'
-targetCompatibility = '14'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(15)
+    }
+}
+
+sourceCompatibility = '15'
+targetCompatibility = '15'
 
 configurations {
     compileOnly {
@@ -17,19 +23,6 @@ configurations {
 
 repositories {
     mavenCentral()
-}
-
-// enable-preview
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += '--enable-preview'
 }
 
 processResources {
